# pandoc-unicode-math

./: CHANGES.md  LICENSE  README.md  example.md  pandoc-unicode-math.cabal  stack.yaml
.github/workflows/: ci.yml  haskell.yml
src/: LatexToUnicode.hs  Main.hs  MathFilter.hs  PandocUnicodeMath.hs  Symbols.hs  UnicodeToLatex.hs
