name:                pandoc-unicode-math
version:             1.1.0
synopsis:            Replace Unicode symbols by equivalent Latex commands
description:         A Pandoc filter that replaces Unicode math symbols and
                     greek letters like ∀, ∈, →, λ, or Ω in math environments
                     by equivalent Latex commands like \forall, \in,
                     \rightarrow, \lambda, or \Omega. That leads to readable
                     math expressions in both Markdown and PDF. And another
                     filter that does the reverse.
homepage:            https://github.com/marhop/pandoc-unicode-math
license:             BSD3
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2017-2019 Martin Hoppenheit
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , example.md
                   , stack.yaml

-- Calling this pandoc-unicode-math-to-latex would neither be pretty nor
-- backwards compatible.
executable pandoc-unicode-math
  hs-source-dirs:    src
  main-is:           UnicodeToLatex.hs
  ghc-options:       -main-is UnicodeToLatex
  build-depends:     base
                   , containers
                   , pandoc-types
  other-modules:     MathFilter
                   , Symbols
  default-language:  Haskell2010

executable pandoc-unicode-math-from-latex
  hs-source-dirs:    src
  main-is:           LatexToUnicode.hs
  ghc-options:       -main-is LatexToUnicode
  build-depends:     base
                   , containers
                   , pandoc-types
                   , pcre-heavy
  other-modules:     MathFilter
                   , Symbols
  default-language:  Haskell2010
