name:                pandoc-unicode-math
version:             3.0.0
synopsis:            Replace Unicode symbols by equivalent Latex commands
description:         A Pandoc filter that replaces Unicode math symbols and
                     greek letters like ∀, ∈, →, λ, or Ω in math environments
                     by equivalent Latex commands like \forall, \in,
                     \rightarrow, \lambda, or \Omega. That leads to readable
                     math expressions in both Markdown and PDF. And another
                     filter that does the reverse.
homepage:            https://github.com/marhop/pandoc-unicode-math
license:             BSD3
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2017-2021 Martin Hoppenheit
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , example.md

-- Calling this pandoc-unicode-math-to-latex would neither be pretty nor
-- backwards compatible.
executable pandoc-unicode-math
  hs-source-dirs:    src
  main-is:           UnicodeToLatex.hs
  ghc-options:       -main-is UnicodeToLatex
  build-depends:     base >= 4.13 && < 4.14
                   , containers >= 0.6.2 && < 0.7
                   , pandoc-types == 1.21
                   , text >= 1.2.4 && < 1.3
  other-modules:     MathFilter
                   , Symbols
  default-language:  Haskell2010

executable pandoc-unicode-math-from-latex
  hs-source-dirs:    src
  main-is:           LatexToUnicode.hs
  ghc-options:       -main-is LatexToUnicode
  build-depends:     base >= 4.13 && < 4.14
                   , containers >= 0.6.2 && < 0.7
                   , pandoc-types == 1.21
                   , pcre-heavy >= 1.0.0 && < 1.1
                   , text >= 1.2.4 && < 1.3
  other-modules:     MathFilter
                   , Symbols
  default-language:  Haskell2010
