cabal-version:       2.2
name:                pandoc-unicode-math
version:             3.1.0
synopsis:            Replace Unicode symbols by equivalent Latex commands
description:         A Pandoc filter that replaces Unicode math symbols and
                     greek letters like ∀, ∈, →, λ, or Ω in math environments
                     by equivalent Latex commands like \forall, \in,
                     \rightarrow, \lambda, or \Omega. That leads to readable
                     math expressions in both Markdown and PDF. And another
                     filter that does the reverse.
homepage:            https://github.com/marhop/pandoc-unicode-math
license:             BSD-3-Clause
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2017-2022 Martin Hoppenheit
category:            Text
build-type:          Simple
extra-source-files:  README.md
                   , example.md

common deps
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     base >= 4.12 && < 5
                   , containers >= 0.6.0 && < 0.7
                   , pandoc-types >= 1.20 && < 1.23
                   , text >= 1.2.3 && < 1.3
  other-modules:     MathFilter
                   , Symbols

executable pandoc-unicode-math
  import:            deps
  main-is:           UnicodeToLatex.hs
  ghc-options:       -main-is UnicodeToLatex

executable pandoc-unicode-math-from-latex
  import:            deps
  main-is:           LatexToUnicode.hs
  ghc-options:       -main-is LatexToUnicode
  build-depends:     HaTeX >= 3.22.3 && < 3.23
